# IncidentPilot

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: nightly-agent.yml
docs/: nightly-workflow-sample.json
docs/adr/: README.md
scripts/: nightly_agent.py
src/incidentpilot/: __init__.py  cli.py
src/incidentpilot/agents/: coordinator.py  escalation.py  postmortem.py  runbook.py  triage.py
src/incidentpilot/core/: config.py
src/incidentpilot/models/: incident.py
tests/: test_coordinator.py  test_escalation.py  test_models.py  test_triage.py
