[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "IncidentPilot"
version = "0.1.0"
description = "Multi-agent incident response orchestrator"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Brian Pelow", email = "brianpelow@github" }]
keywords = ["agents", "langgraph", "incident-response", "sre", "fintech"]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "anthropic>=0.28.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
]

[project.scripts]
incident-pilot = "incidentpilot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/incidentpilot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"